--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(./img/hero.jpg);
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8156862745), rgba(40, 180, 133, 0.7254901961)), url(./img/hero.jpg);
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
@@ -221,9 +221,12 @@ body {
 .row .col-1-of-2 {
   width: calc((100% - 6rem) / 2);
 }
+.row .col-1-of-4 {
+  width: calc((100% - 3 * 6rem) / 4);
+}
 
 .heading-tertiary {
-  font-size: 2.6rem;
+  font-size: 1.6rem;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -287,4 +290,36 @@ body {
 }
 .composition:hover .composition__photo:not(:hover) {
   transform: scale(0.95);
+}
+
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.804);
+  font-size: 1rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s;
+}
+.feature-box:hover {
+  transform: translateY(-1.5rem) scale(1.03);
+}
+.feature-box__icon {
+  font-size: 6rem;
+  margin-bottom: 0.5rem;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(119, 119, 119, 0.8)), url(./img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -10rem;
+}
+.section-features > * {
+  transform: skewY(7deg);
 }/*# sourceMappingURL=style.css.map */
