--- a/style.scss
+++ b/style.scss
@@ -7,18 +7,15 @@ $color-black: #000;
 
 $color-grey-light-1: #f7f7f7;
 
-
-$grid-width:114rem;
-$gutter-vertical:8rem;
-$gutter-horizontal:6rem;
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
 
 $defualt-font-size: 1.6rem;
 
-
-
-@mixin clearfix{
-  &::after{
-    content:"" ;
+@mixin clearfix {
+  &::after {
+    content: "";
     clear: both;
     display: table;
   }
@@ -55,11 +52,7 @@ body {
 }
 .header {
   height: 95vh;
-  background-image: linear-gradient(
-      to right bottom,
-      $color-primary-light,
-      $color-primary-dark
-    ),
+  background-image: linear-gradient(to right bottom, #7ed56fd0, #28b485b9),
     url(./img/hero.jpg);
   background-size: cover;
   background-position: top;
@@ -201,128 +194,172 @@ body {
   }
 }
 
-
-.section-about{
-  background-color:$color-grey-light-1 ;
+.section-about {
+  background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
 }
-.heading-secondary{
+.heading-secondary {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
   -webkit-background-clip: text;
   color: transparent;
-  transition: all .2s;
-  letter-spacing: .2rem;
+  transition: all 0.2s;
+  letter-spacing: 0.2rem;
 
-  &:hover{
+  &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
-    text-shadow: .5rem 1rem 2rem rgba($color-black, $alpha: .2);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, $alpha: 0.2);
   }
 }
-.u-center-text{
-  text-align: center; 
+.u-center-text {
+  text-align: center;
 }
-.u-margin-bottom-big{
+.u-margin-bottom-big {
   margin-bottom: 8rem;
 }
-.u-margin-bottom-medium{
+.u-margin-bottom-medium {
   margin-bottom: 4rem;
 }
-.u-margin-bottom-small{
+.u-margin-bottom-small {
   margin-bottom: 1.5rem;
 }
-.row{
+.row {
   max-width: $grid-width;
   margin: 0 auto;
-  &:not(:last-child){
+  &:not(:last-child) {
     margin-bottom: $gutter-vertical;
   }
   @include clearfix;
 
   [class^="col-"] {
-    float:left;
-    &:not(:last-child){
+    float: left;
+    &:not(:last-child) {
       margin-right: $gutter-horizontal;
     }
   }
-  .col-1-of-2{
+  .col-1-of-2 {
     width: calc((100% - #{$gutter-horizontal}) / 2);
+  }
+  .col-1-of-4 {
+    width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
   }
 }
 
-.heading-tertiary{
-  font-size: 2.6rem;
+.heading-tertiary {
+  font-size: 1.6rem;
   font-weight: 700;
   text-transform: uppercase;
-
 }
-.paragraph{
+.paragraph {
   font-size: 1.4rem;
-  &:not(:last-child){
+  &:not(:last-child) {
     margin-bottom: 3rem;
   }
 }
-.btn-text{
-  &:link
-  ,&:visited{
+.btn-text {
+  &:link,
+  &:visited {
     color: $color-primary;
     display: inline-block;
     text-decoration: none;
     border-bottom: 1px solid $color-primary;
     padding: 3px;
     font-size: $defualt-font-size;
-    transition: all .2s;
-    
+    transition: all 0.2s;
   }
-  &:hover{
+  &:hover {
     background-color: $color-primary;
     color: $color-white;
-    box-shadow: 0 1rem 2rem rgba($color-black, $alpha: .15);
+    box-shadow: 0 1rem 2rem rgba($color-black, $alpha: 0.15);
     transform: translate(-2px);
   }
-  &:active{
-    box-shadow: 0 .5rem 1rem rgba($color-black, $alpha: .15);
+  &:active {
+    box-shadow: 0 0.5rem 1rem rgba($color-black, $alpha: 0.15);
     transform: translate(-2px);
   }
 }
 
-.composition{
+.composition {
   position: relative;
-  &__photo{
+  &__photo {
     width: 55%;
-    box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: .4);
+    box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: 0.4);
     border-radius: 2px;
     position: absolute;
     z-index: 10;
-    transition: all .2s;
+    transition: all 0.2s;
     outline-offset: 2rem;
 
-    &--p1{
+    &--p1 {
       left: 0;
       top: -2rem;
     }
-    &--p2{
+    &--p2 {
       right: 0;
       top: 2rem;
     }
-    &--p3{
+    &--p3 {
       left: 20%;
       top: 10rem;
     }
 
-    &:hover{
-      transform: scale(1.05) translateY(-.5rem);
-      box-shadow: 0 2.5rem 4rem rgba($color: $color-black, $alpha: .5);
+    &:hover {
+      transform: scale(1.05) translateY(-0.5rem);
+      box-shadow: 0 2.5rem 4rem rgba($color: $color-black, $alpha: 0.5);
       z-index: 20;
       outline: 1.5rem solid $color-primary;
     }
   }
-  &:hover &__photo:not(:hover){
-    transform: scale(.95);
+  &:hover &__photo:not(:hover) {
+    transform: scale(0.95);
   }
+}
 
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.804);
+  font-size: 1rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, $alpha: 0.15);
+  transition: transform .3s;
+  // transform: skewY(7deg);
+  &:hover {
+    transform: translateY(-1.5rem) scale(1.03);
+  }
+  &__icon {
+    font-size: 6rem;
+    margin-bottom: 0.5rem;
+    display: inline-block;
+    background-image: linear-gradient(
+      to right,
+      $color-primary-light,
+      $color-primary-dark
+    );
+    -webkit-background-clip: text;
+    color: transparent;
+  }
+}
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-light, 0.8),
+      rgba($color-gray-dark, 0.8)
+    ),
+    url(./img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -10rem;
+  & > *{
+    transform: skewY(7deg);
+  }
 }
