--- a/style.scss
+++ b/style.scss
@@ -510,13 +510,13 @@ body {
 
 .section-stories{
   padding: 15rem 0 ;
-  background-color: $color-grey-light-2;
+  position: relative;
 }
 .story{
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba($color: $color-black, $alpha: .1);
-  background-color: $color-white;
+  background-color: rgba($color: $color-white, $alpha: .5);
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
@@ -535,12 +535,40 @@ body {
     clip-path:circle(50% at 50% 50%) ;
     -webkit-clip-path:circle(50% at 50% 50%) ;
     transform: translateX(-3rem) skewX(12deg) ;
+    position: relative;
   }
   &__img{
     height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
+    transition: all .5s;
   }
   &__text{
     transform: skewX(12deg);
+  }
+  &__caption{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,20%);
+    color: $color-white;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all .5s;
+    backface-visibility: hidden;
+
+  }
+  &:hover &__caption{
+    opacity: 1;
+    transform: translate(-50%,-50%);
+
+  }
+  &:hover &__img{
+    transform: translateX(-4rem) scale(1);
+    backface-visibility: hidden;
+    filter: blur(3px);
   }
 }
 
@@ -567,3 +595,22 @@ body {
   }
 }
 
+
+
+.bg-video{
+  position: absolute;
+  top: 0;
+  left: 0; 
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .15;
+  overflow: hidden;
+
+  &__content{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
+}
