--- a/icon.css
+++ b/icon.css
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: "linea-basic-10";
-  src:url("./fnt/linea-basic-10.eot");
-  src:url("./fnt/linea-basic-10.eot?#iefix") format("embedded-opentype"),
-    url("./fnt/linea-basic-10.woff") format("woff"),
-    url("./fnt/linea-basic-10.ttf") format("truetype"),
-    url("./fnt/linea-basic-10.svg#linea-basic-10") format("svg");
+  src:url("./font-icon/linea-basic-10.eot");
+  src:url("./font-icon/linea-basic-10.eot?#iefix") format("embedded-opentype"),
+    url("./font-icon/linea-basic-10.woff") format("woff"),
+    url("./font-icon/linea-basic-10.ttf") format("truetype"),
+    url("./font-icon/linea-basic-10.svg#linea-basic-10") format("svg");
   font-weight: normal;
   font-style: normal;
 
