--- a/style.scss
+++ b/style.scss
@@ -10,7 +10,6 @@ $color-secondary-dark: #ff7830;
 $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
 
-
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
@@ -60,7 +59,7 @@ body {
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, #7ed56fd0, #28b485b9),
-    url(./img/hero.jpg);
+    url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
@@ -200,18 +199,16 @@ body {
     animation-fill-mode: backwards;
   }
 
-  &--green{
+  &--green {
     background-color: $color-primary-dark;
     color: white;
-
   }
-  &--white{
+  &--white {
     background-color: $color-white;
     color: $color-gray-dark;
     &::after {
       background-color: $color-white;
     }
-
   }
 }
 
@@ -379,7 +376,7 @@ body {
       rgba($color-primary-light, 0.8),
       rgba($color-gray-dark, 0.8)
     ),
-    url(./img/nat-4.jpg);
+    url(../img/nat-4.jpg);
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -10rem;
@@ -410,53 +407,78 @@ body {
     width: 100%;
     backface-visibility: hidden;
     border-radius: 3px;
-    box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: .15);
+    box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: 0.15);
 
-    &--front{
+    &--front {
       background-color: $color-white;
     }
-    &--back{
+    &--back {
       // background-color: colo;
       transform: rotateY(180deg);
-      &-1{
-        background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
+      &-1 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        );
       }
-      &-2{
-        background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+      &-2 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-primary-light,
+          $color-primary-dark
+        );
       }
-      &-3{
-        background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+      &-3 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-tertiary-light,
+          $color-tertiary-dark
+        );
       }
     }
   }
-  &:hover &__side--front{
+  &:hover &__side--front {
     transform: rotateY(-180deg);
   }
-  &:hover &__side--back{
+  &:hover &__side--back {
     transform: rotateY(0deg);
   }
-  &__picture{
+  &__picture {
     // background-size: cover;
     height: 23rem;
     background-blend-mode: screen;
-    clip-path: polygon(0 0 , 100% 0, 100% 85%, 0 100%);
-    -webkit-clip-path: polygon(0 0 , 100% 0, 100% 85%, 0 100%);
-    img{
-      height: 23rem;
-      width: 34rem;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    &--1 {
+      background: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        ),
+        url(../img/nat-5.jpg);
+        background-size: cover;
     }
-    // width: 23rem;
-    &--1{
-      background: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(./img/favicon.png);
+    &--2 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-primary-light,
+          $color-primary-dark
+        ),
+        url(../img/nat-6.jpg);
+        background-size: cover;
     }
-    &--2{
-      background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url(./img/favicon.png);
-    }
-    &--3{
-      background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url(./img/favicon.png);
+    &--3 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-tertiary-light,
+          $color-tertiary-dark
+        ),
+        url(../img/nat-4.jpg);
+        background-size: cover;
     }
   }
-  &__heading{
+  &__heading {
     font-size: 2.5rem;
     font-weight: 300;
     text-transform: uppercase;
@@ -466,151 +488,160 @@ body {
     text-align: right;
     width: 75%;
   }
-  &__heading-span{
+  &__heading-span {
     padding: 1rem 1.5rem;
     box-decoration-break: clone;
     -webkit-box-decoration-break: clone;
-    &--1{
-      background-image: linear-gradient(to right bottom, rgba($color-secondary-light,.85),rgba($color-secondary-dark, .85));
+    &--1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, 0.85),
+        rgba($color-secondary-dark, 0.85)
+      );
     }
-    &--2{
-      background-image: linear-gradient(to right bottom, rgba($color-primary-light,.85),rgba($color-primary-dark, .85));
+    &--2 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.85),
+        rgba($color-primary-dark, 0.85)
+      );
     }
-    &--3{
-      background-image: linear-gradient(to right bottom, rgba($color-tertiary-light,.85),rgba($color-tertiary-dark, .85));
+    &--3 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-tertiary-light, 0.85),
+        rgba($color-tertiary-dark, 0.85)
+      );
     }
   }
 
-  &__details{
+  &__details {
     padding: 3rem;
 
-    ul{
+    ul {
       list-style: none;
       width: 80%;
       margin: 0 auto;
 
-      li{
+      li {
         text-align: center;
-        font-size:1.5rem ;
+        font-size: 1.5rem;
         padding: 1rem;
-        &:not(:last-child){
-          border-bottom:1px solid $color-grey-light-2 ;
+        &:not(:last-child) {
+          border-bottom: 1px solid $color-grey-light-2;
         }
       }
     }
   }
-
 }
 
-
-
-
-
-
-
-.section-stories{
-  padding: 15rem 0 ;
+.section-stories {
+  padding: 15rem 0;
   position: relative;
 }
-.story{
+.story {
   width: 75%;
   margin: 0 auto;
-  box-shadow: 0 3rem 6rem rgba($color: $color-black, $alpha: .1);
-  background-color: rgba($color: $color-white, $alpha: .5);
+  box-shadow: 0 3rem 6rem rgba($color: $color-black, $alpha: 0.1);
+  background-color: rgba($color: $color-white, $alpha: 0.5);
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
   font-size: $defualt-font-size;
   transform: skewX(-12deg);
-  &>*{
+  & > * {
     transform: skewX(12deg);
   }
-  
-  &__shape{
+
+  &__shape {
     width: 15rem;
     height: 15rem;
     float: left;
     shape-outside: circle(50% at 50% 50%);
     -webkit-shape-outside: circle(50% at 50% 50%);
-    clip-path:circle(50% at 50% 50%) ;
-    -webkit-clip-path:circle(50% at 50% 50%) ;
-    transform: translateX(-3rem) skewX(12deg) ;
+    clip-path: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg);
     position: relative;
   }
-  &__img{
+  &__img {
     height: 100%;
     transform: translateX(-4rem) scale(1.4);
     backface-visibility: hidden;
-    transition: all .5s;
+    transition: all 0.5s;
   }
-  &__text{
+  &__text {
     transform: skewX(12deg);
   }
-  &__caption{
+  &__caption {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,20%);
+    transform: translate(-50%, 20%);
     color: $color-white;
     text-transform: uppercase;
     font-size: 1.7rem;
     text-align: center;
     opacity: 0;
-    transition: all .5s;
+    transition: all 0.5s;
     backface-visibility: hidden;
-
   }
-  &:hover &__caption{
+  &:hover &__caption {
     opacity: 1;
-    transform: translate(-50%,-50%);
-
+    transform: translate(-50%, -50%);
   }
-  &:hover &__img{
+  &:hover &__img {
     transform: translateX(-4rem) scale(1);
     backface-visibility: hidden;
     filter: blur(3px);
   }
 }
 
-.card{
-  &__cta{
+.card {
+  &__cta {
     text-align: center;
-    // padding: 5rem;
   }
-  &__price{
-    &-box{
+  &__price {
+    &-box {
       padding: 3rem;
     }
-    &-only{
+    &-only {
       padding-top: 5rem;
       color: $color-white;
       font-size: 2rem;
     }
-    &-value{
+    &-value {
       padding-bottom: 3rem;
       color: $color-white;
       font-size: 3.5rem;
-
     }
   }
 }
 
-
-
-.bg-video{
+.bg-video {
   position: absolute;
   top: 0;
-  left: 0; 
+  left: 0;
   height: 100%;
   width: 100%;
   z-index: -1;
-  opacity: .15;
+  opacity: 0.15;
   overflow: hidden;
 
-  &__content{
+  &__content {
     height: 100%;
     width: 100%;
     object-fit: cover;
   }
-
 }
+.section-book{
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, $color-primary-light,$color-primary-dark);
+}
+.book{
+  background-image: url(../img/nat-10.jpg);
+  background-size: 100%;
+  height: 50rem;
+}
+
+
