--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@ $color-primary: #55c57e;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-gray-dark: #777;
+$color-gray-dark-2: #999;
 $color-white: #fff;
 $color-black: #000;
 $color-secondary-light: #ffbb00;
@@ -147,6 +148,7 @@ body {
 }
 
 .btn {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -157,12 +159,15 @@ body {
     transition: all 0.2s;
     position: relative;
     font-size: 1.6rem;
+
+    border: none;
+    cursor: pointer;
   }
   &:hover {
     transform: translateY(-3px);
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
   }
-  &:active {
+  &:active, &:focus{
     transform: translateY(-1px);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
@@ -238,7 +243,7 @@ body {
   }
 }
 .u-center-text {
-  text-align: center;
+  text-align: center !important;
 }
 .u-margin-bottom-big {
   margin-bottom: 8rem;
@@ -387,7 +392,7 @@ body {
 
 .section-tours {
   background-color: $color-grey-light-1;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 25rem 0;
   margin-top: -10rem;
 }
 .card {
@@ -457,7 +462,7 @@ body {
           $color-secondary-dark
         ),
         url(../img/nat-5.jpg);
-        background-size: cover;
+      background-size: cover;
     }
     &--2 {
       background-image: linear-gradient(
@@ -466,7 +471,7 @@ body {
           $color-primary-dark
         ),
         url(../img/nat-6.jpg);
-        background-size: cover;
+      background-size: cover;
     }
     &--3 {
       background-image: linear-gradient(
@@ -475,7 +480,7 @@ body {
           $color-tertiary-dark
         ),
         url(../img/nat-4.jpg);
-        background-size: cover;
+      background-size: cover;
     }
   }
   &__heading {
@@ -634,14 +639,117 @@ body {
     object-fit: cover;
   }
 }
-.section-book{
+.section-book {
   padding: 15rem 0;
-  background-image: linear-gradient(to right bottom, $color-primary-light,$color-primary-dark);
+  background-image: linear-gradient(
+    to right bottom,
+    $color-primary-light,
+    $color-primary-dark
+  );
 }
-.book{
-  background-image: url(../img/nat-10.jpg);
+.book {
+  background-image: linear-gradient(
+      105deg,
+      rgba($color-white, 0.9) 0%,
+      rgba($color-white, 0.9) 50%,
+      transparent 50%
+    ),
+    url(../img/nat-10.jpg);
   background-size: 100%;
-  height: 50rem;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: 0.2);
+
+  height: 55rem;
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
 }
 
+.form {
+  &__group:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+  &__input {
+    font-size: 1.5rem;
+    font-family: inherit;
+    color: inherit;
+    padding: 1.5rem 2rem;
+    border-radius: 2px;
+    background-color: rgba($color: $color-white, $alpha: 0.5);
+    border: none;
+    border-bottom: 3px solid transparent;
+    width: 90%;
+    display: block;
+    transition: all 0.3s;
 
+    &::-webkit-input-placeholder {
+      color: $color-gray-dark-2;
+    }
+    &:focus:invalid {
+      border-bottom: 3px solid $color-secondary-dark;
+    }
+    &:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem rgba($color: $color-black, $alpha: 0.1);
+      border-bottom: 3px solid $color-primary;
+    }
+  }
+
+  &__label {
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-left: 2rem;
+    margin-top: 0.7rem;
+    display: block;
+    transition: all 0.3s;
+  }
+  &__input:placeholder-shown + &__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4rem);
+    // &:active{
+    //   opacity: 1;
+    // }
+  }
+  &__radio-input {
+    display: none;
+  }
+  &__radio-group {
+    width: 49%;
+    display: inline-block;
+  }
+  &__radio-label {
+    font-size: $defualt-font-size;
+    cursor: pointer;
+    position: relative;
+    padding-left: 3.5rem;
+  }
+  &__radio-button {
+    height: 3rem;
+    width: 3rem;
+    border: 5px solid $color-primary;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: -0.5rem;
+    &::after {
+      content: "";
+      display: block;
+      height: 1rem;
+      width: 1rem;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: $color-primary;
+      opacity: 0;
+      transition: opacity 0.2s;
+    }
+  }
+  &__radio-input:checked ~ &__radio-label &__radio-button::after {
+    opacity: 1;
+  }
+}
